glFusion ChangeLog

v1.1.9
------
- Calendar: Enforce login required on event view (event.php) (Mark)
- Forum: Translate <>& in posts when created with WYSIWYG editor (Mark)
- Topic block - do not mark inactive if $topic is blank (Mark)
- New permission - stats.view - controls access to Stats page (Mark)
- Media Gallery: Added linksrc: parameter to media auto tag to specify
  which image (tn/disp/orig) should be used in the direct link (Mark)
- Calendar Plugin: Admin interface improvements & code scrub (Mark H.)
    - New feature: JS date picker for start/end dates
    - New feature: Ability to enable/disable events
    - New feature: Auto-set event end month/day/year/hour/minute to event start
    - New feature: Client-side validation for required fields
    - New feature: Suppress input fields for hr/min/ampm if all day event
- Staticpage Admin: Admin interface improvements & code scrub (Mark H.)
    - New feature: Ability to enable/disable staticpages
- Added wrapper static page widget (Eric)
- Plugin Admin: Code scrub/UI improvements (Mark H.)
- Topic Admin: New list-based manager, code scrub/UI improvements (Mark H.)
    - New feature: Client-side validation for required fields (Mark)
- Media Gallery: Updated FCKeditor Media Browser plugin to support all auto tag
  options (Mark)
- Media Gallery: Fixed error in raw thumbnail preview where it did not work
  with images other than jpg (Mark)
- Media Gallery: Increased the width of the album jumpbox to accommodate
  more nested albums (Mark)
- General E_ALL fixes (Mark)
- Updated FCKeditor to v2.6.6 (Mark)
- Clean up search results a bit (improve formatting) (Mark)
- Implemented sort story by option in topics (Mark)
- Implemented COM_truncateHTML() in feeds - ported from Geeklog (Mark)
- Moved Multiple Language configuration options to their own fieldset
  in hopes this will remove some of the confusion on these fields (Mark)
- Forum: Fixed issue where users would continue to receive new post