@@ -2719,7 +2719,7 @@ function plugin_centerblock_mediagallery($where=1,$page=1,$topic =''){
         }
     }
 
-    $result = DB_query("SELECT album_id, cbpage, cbposition FROM {$_TABLES['mg_albums']} WHERE featured='1' AND (cbpage='" . DB_escapeString($sTopic) . "' OR cbpage='all') " . COM_getPermSQL('and') . " LIMIT 1");
+    $result = DB_query("SELECT album_id, cbpage, cbposition FROM {$_TABLES['mg_albums']} WHERE featured='1' AND (cbpage='" . DB_escapeString($sTopic) . "' OR cbpage='all' OR cbpage='allnhp') " . COM_getPermSQL('and') . " LIMIT 1");
 
     if (DB_numRows($result) == 1) {
         list($album_id,$cbpage,$cbpos) = DB_fetchArray($result);
@@ -2729,7 +2729,9 @@ function plugin_centerblock_mediagallery($where=1,$page=1,$topic =''){
             $cbenable = 0;
         } elseif ($cbpage == 'all' && $page > 1 ){
             $cbenable = 0;
-        } elseif ($cbpage != 'none' && $cbpage != 'all' && $cbpage != $topic) { // $cbpage != $topic) {
+        } elseif ($cbpage == 'allnhp' && COM_onFrontpage() ) {
+            $cbenable = 0;
+        } elseif ($cbpage != 'allnhp' && $cbpage != 'none' && $cbpage != 'all' && $cbpage != $topic) { // $cbpage != $topic) {
             $cbenable = 0;
         } else
             $cbenable = 1;
