@@ -379,6 +379,7 @@ function MG_editAlbum( $album_id=0, $mode ='', $actionURL='', $oldaid = 0 ) {
 
         $featurepage_select = '<select name="featurepage">';
         $featurepage_select .= '<option value="all"' . ($A['cbpage'] == 'all' ? 'selected="selected"' : '') .'>' . $LANG_MG01['all'] . '</option>';
+        $featurepage_select .= '<option value="allnhp"' . ($A['cbpage'] == 'allnhp' ? 'selected="selected"' : '') .'>' . $LANG_MG01['all_nhp'] . '</option>';
         $featurepage_select .= '<option value="none"' . ($A['cbpage'] == 'none' ? 'selected="selected"' : '') .'>' . $LANG_MG01['homepage_only'] . '</option>';
         $featurepage_select .= COM_topicList('tid,topic',$A['cbpage']);
         $featurepage_select .= '</select>';
