@@ -114,7 +114,8 @@ $LANG_STATIC = array(
     'limit_results' => 'Limit Results',
     'search' => 'Make Searchable',
     'submit' => 'Submit',
-    'delete_confirm' => 'Are you sure you want to delete this page?'
+    'delete_confirm' => 'Are you sure you want to delete this page?',
+    'allnhp_topics' => 'All Topics (No Homepage)',
 );
 
 $PLG_staticpages_MESSAGE19 = '';
